HtmlUi: changed icon for view-menu open/collapse, solved some small fixmes

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/DesktopNavigation.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/DesktopNavigation.css
@@ -76,7 +76,8 @@
 
   &::before {
     .font-icon;
-    content: @icon-caret-down;
+    font-size: 17px;
+    content: @icon-angle-down;
   }
 
   &:hover {
